- 在 `rollup.config.mjs` 中添加了 `console.log` 以调试 `pluginDeploy` 函数。 - 在 `src/behavior/harvest.ts` 中引入了 `log` 函数，并在多个条件下添加了日志记录。 - 在 `src/main.ts` 中注释掉了 `console.log`，并添加了对 `Game.flags` 的处理。 - 在 `src/modules/Scanner.ts` 中引入了 `isRoomExist` 函数，并初始化了 `Memory.logLevel`。 - 在 `src/modules/autoCreate.ts` 中优化了 `createBody` 函数，减少了 `MOVE` 部件的数量。 - 在 `src/modules/mount.ts` 中将 `log` 函数替换为 `log.warn`。 - 在 `src/modules/structure.ts` 中重构了多个函数，添加了 `generatePostionWithRange` 函数以生成坐标。 - 在 `src/role/carry.ts` 中修改了 `getFromStorage` 和 `getFromContainer` 函数以支持资源类型参数。 - 在 `src/role/explorer.ts` 中添加了 `isMaxControllerRooms` 函数。 - 在 `src/role/harvester.ts` 中优化了任务分配逻辑，添加了 `watiSomeTime` 函数。 - 在 `src/role/work.ts` 中为建造任务添加了优先级排序。 - 在 `src/task/run.ts` 中将日志级别更改为 `log.info`。 - 在 `src/types/index.d.ts` 中为 `Memory` 添加了 `logLevel` 和 `logBan` 属性。 - 在 `src/utils.ts` 中扩展了 `log` 函数，支持不同的日志级别和屏蔽列表。 - 在 `src/var.ts` 中为 `bodyRateMap` 添加了 `max` 属性。 - 在 `常用.md` 中添加了常用的 Screeps CLI 命令。

--- a/指令.md
+++ b/指令.md
@@ -122,3 +122,30 @@ Screep CLI 提供了一系列命令，用于在 Screeps 私服中控制服务器
       ```
 
 这些命令可以根据服务器配置和安装的模组有所不同。更多详细信息和命令，可以参考 Screeps 维基页面。
+
+
+# 常用
+system.setTickDuration(500)
+# 重置
+
+```shell
+system.resetAllData()
+```
+
+# 暂停
+```shell
+system.pauseSimulation()
+```
+
+# 恢复
+```shell
+system.resumeSimulation()  
+```
+
+# 删除 道路 和 扩展
+
+```shell
+storage.db['rooms.objects'].update({ _id: '24b307748aeaa42' },{ $set: { level: 3 } })
+storage.db['rooms.objects'].removeWhere({ type: 'road' });
+storage.db['rooms.objects'].removeWhere({ type: 'extension' });
+storage.db['rooms.objects'].removeWhere({ type: 'constructionSite' });
